added function click to create a description

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </svg>
             </div>
         </div>
-        <dic class="container__list d-flex pt-3">
+        <div class="container__list d-flex pt-3">
             <div class="list__book"></div>
-        </dic>
+        </div>
     </header>
     <!-- main section -->
     <main>
