--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                     </span>
                 </div>
                 <div class="container__list d-flex pt-3">
-                    <div class="list__book"></div>
+                    <div class="list__book">
+                    </div>
                 </div>
             </article>
         </header>
