fixed open & close description toggle JS

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="list mt-10 overflow__auto h-50">
                     <!-- title books -->
                 </div>
-                <div class="clear pointer">clear all</div>
+                <div class="clear pointer">Delete last title</div>
             </div>
         </article>
     </nav>
