--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>library</title>
 </head>
 <body>
-    <nav class="w-100 d-flex">
+    <nav class="w-100 d-flex p-3">
         <figure class="w-6 p-3">
             <!-- logo library -->
              <a href="index.html" class="pointer">
