--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--
+    
+       _____ _     _       _ 
+      / ____| |   (_)     (_)
+     | (___ | |__  _ _ __  _ 
+      \___ \| '_ \| | '_ \| |
+      ____) | | | | | | | | |
+     |_____/|_| |_|_|_| |_|_|
+
+
+                  Created by: Alessandro Catucci
+        Project Start2Impact: Library API
+
+        
+        GitHub: https://github.com/AleShini92
+
+    -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>library</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="public/icon_20x20.svg" type="image/x-icon">
+    <link rel="manifest" href="public/manifest.json" />
+    <!-- favicon for safari -->
+    <link rel="apple-touch-icon" href="public/icon_20x20.svg" />
+    <!-- open graph -->
+    <meta name="description" content="Benvenuti nel sito di Library, dove si posso effettuare ricerchi di libri tramite il genere .">
+    <meta property="og:description" content="ricerca di libri tramite genere.">
+    <meta property="og:title" content="landing page">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mylibraryapi.netlify.app">
+    <meta property="og:image" content="https://aleshini92.github.io/library/componet/img/icon_20x20.svg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+    <meta property="og:locale" content="en_GB" />
 </head>
 <body>
     <nav class="w-100 d-flex space-between p-3">
