fixed icon delete prefer book

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
         <article class="my__book absolute">
             <div class="container__book relative">
                 <div class="list mt-10 overflow__auto h-50">
+                    <h4>Prefers Books:</h4>
                     <!-- title books -->
                 </div>
-                <div class="clear pointer absolute">Delete last title</div>
+                <!-- <div class="clear pointer absolute">Delete last title</div> -->
             </div>
         </article>
     </nav>
