--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <nav class="w-100 d-flex space-between p-3">
-        <figure class="w-6 p-3">
+        <figure class="p-3">
             <!-- logo library -->
              <a href="index.html" class="pointer">
                 <svg id="Livello_1" data-name="Livello 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 318.06 75.81">
@@ -57,7 +57,7 @@
              </a>
         </figure>
         <!-- icon book -->
-        <figure class="w-1 mr-30 book">
+        <figure class="w-5 mr-30 book">
             <svg class="pointer" version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 576 512" style="enable-background:new 0 0 576 512;" xml:space="preserve">
                 <style type="text/css">
