--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     </nav>
     <!-- search bar -->
     <section class="library d-flex space-between">
-        <header>
-            <article class="container__search d-flex justify-center">
+        <header class="d-flex">
+            <article class="container__search d-flex justify-center a-center">
                 <h1>Find Books by Genre</h1>
                 <div class="search d-flex space-between">
                     <input class="poppins-bold" type="text" id="genre" placeholder="e.g. Fantasy, Horror, Music...">
