fixed bug css file index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
     <meta property="og:locale" content="en_GB" />
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
     <nav class="w-100 d-flex space-between p-3">
@@ -117,6 +118,6 @@
             </section>
         </main>
     </section>
-    <script src="dist/main.bundle.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
